<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark_Gray_Background"
    tools:context=".activities.HabitListActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_list_all_button">

        <ListView
            android:id="@+id/all_habits_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"
            android:visibility="visible" />

        <com.baoyz.swipemenulistview.SwipeMenuListView
            android:id="@+id/daily_habits_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"
            android:visibility="invisible" />

    </FrameLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/habit_list_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners_button_clicked"
        android:fontFamily="@font/lato_bold"
        android:text="@string/all_button_text"
        android:textAllCaps="false"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/habit_list_today_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corners_button_not_clicked"
        android:fontFamily="@font/lato_bold"
        android:text="@string/today_button_text"
        android:textAllCaps="false"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toEndOf="@+id/habit_list_all_button"
        app:layout_constraintTop_toTopOf="@+id/habit_list_all_button" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/TEMP_habit_list_greeting"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_habit_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Dark_Gray_Background"
        app:layout_constraintBottom_toBottomOf="@+id/habit_list_today_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/habit_list_today_button"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/friendsButton"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeButton"
        app:srcCompat="@drawable/ic_baseline_people_24"
        app:tint="@color/Light_Gray_Text_Background" />

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintStart_toStartOf="@+id/habit_list_all_button"
        app:layout_constraintTop_toTopOf="@+id/greeting"
        app:srcCompat="@drawable/ic_baseline_logout_24"
        app:tint="@color/Lighter_Gray_Text" />

</androidx.constraintlayout.widget.ConstraintLayout>