...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark_Gray_Background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/habit_title"
        android:layout_width="149dp"
        android:layout_height="43dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:hint="Habit Title"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.311" />

    <TextView
        android:id="@+id/habit_reason"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="41dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"></TextView>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="158dp"
        android:background="#00FFFFFF"
        android:src="?attr/actionModeCloseDrawable"
...
