<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/habit_list_item">

    <ImageView
        android:id="@+id/habit_status_bar"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:layout_marginVertical="7dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/habit_status_bar" />

    <TextView
        android:id="@+id/habit_name_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@id/habit_progress_bar"
        android:layout_toRightOf="@id/habit_status_bar"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/habit_occurence_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/habit_name_text"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/habit_progress_bar"
        android:layout_toRightOf="@id/habit_status_bar"
        android:textColor="@color/Light_Gray_Text_Background" />

    <ImageView
        android:id="@+id/habit_progress_bar"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="7dp"
        android:background="@drawable/habit_progress_bar" />

</RelativeLayout>